Feature/mailer (#85)
* add sendgrid library

* add new environment variables for example

* add mailer util

* update crypto util

* add new table schemas to migrate

* create models for schemas created

* create mail dto

* add mailer-related repositories

* add services and initializer

* seed newly created schemas

* add new handlers and routes for mailer

* update documentation

* fix mailer connection

* add invitation confirmation modal

* fix endpoint

* remove contact us

* update user dto service and repository functions

* add randomize string

* update mailer body

* fix typo on invitation mail

---------
